--- a/css/bookmark.css
+++ b/css/bookmark.css
@@ -27,6 +27,10 @@ body {
     padding-bottom: 1rem!important;
 }
 
+.mt-2 {
+    margin-top: 0.50rem!important
+}
+
 .mt-3 {
     margin-top: 1rem!important
 }
@@ -49,6 +53,15 @@ body {
     margin-bottom: 0.50rem!important;
 }
 
+.my-3 {
+    margin-top: 1rem!important;
+    margin-bottom: 1rem!important;
+}
+
+m-0 {
+    margin: 0rem!important;
+}
+
 .row {
   display: flex;
 }
@@ -59,6 +72,10 @@ body {
 
 .column-20 {
   flex: 20%;
+}
+
+.column-100 {
+  flex: 100%;
 }
 
 .text-right {
@@ -77,3 +94,23 @@ body {
     word-wrap: break-word;
 }
 
+.success {
+    color: #81C784;
+}
+
+.warning {
+    color: #FFF176;
+}
+
+.danger {
+    color: #E57373;
+}
+
+
+input {
+    border-radius: 3px;
+    font-size: 120%;
+    width: 300px;
+    border: 1px solid black;
+    font-family: monospace;
+}
